<resources>
    <string name="app_name">GitHub User</string>
    <string name="app_name2">Detail GitHub User</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="tv_name">Name</string>
    <string name="tv_userName">User Name</string>
    <string name="tv_company">Company</string>
    <string name="tv_resultData">Result : %d data</string>
    <string name="avatar">Avatar</string>
    <string name="tv_username">User Name</string>
    <string name="repository">Repository</string>
    <string name="tab_1">%d Followers</string>
    <string name="tab_2">%d Following</string>
    <string name="publicrepos">%d Repository</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">splashscreen</string>
</resources>